# variational-inference

./: .gitignore  README.md  shell.nix  variational-inference.cabal
VI/: Categories.hs  Disintegrations.hs  Domains.hs  Inference.hs  Jets.hs  Models.hs  Test.hs  Util.hs
src/VI/: Disintegrations.hs  Inference.hs  Models.hs  Quasiarrows.hs  Test.hs
test-suite/: Main.hs
