cabal-version:      2.4
name:               variational-inference
version:            0.1.0.0
synopsis:           Experimental ADVI-style framework
homepage:           https://github.com/ttugj/variational-inference
license:            NONE
author:             Jan Gutt
maintainer:         jgutt@protonmail.com
category:           Math

library
    exposed-modules:
        VI.Util
        VI.Quasiarrows
        VI.Models
        VI.Inference
        VI.Categories
        VI.Domains
        VI.Jets
        VI.Test

    build-depends:
        base ^>=4.15.0.0,
        hmatrix ^>=0.20.2,
        vector ^>=0.12.3.1,
        primitive ^>=0.7.2.0,
        mtl ^>=2.2.2,
        random ^>=1.2.0,
        mwc-random ^>=0.15.0.2,
        ghc-prim ^>=0.7.0,
        hmatrix-special ^>=0.19.0.0,
        ghc-typelits-natnormalise ^>= 0.7.6,
        ghc-typelits-knownnat ^>= 0.7.6,
        ghc-typelits-extra ^>= 0.4.3,

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite variational-inference-test-suite
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test-suite
    build-depends: base, variational-inference
 
